Fix z-index in menu (for timeline), show "sponsored by" only when one is available, move timeline to left (instead of centered).

--- a/assets/sass/components/_Menu.scss
+++ b/assets/sass/components/_Menu.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 20;
+  z-index: 120;
   // Flexbox
   display: flex;
   justify-content: space-between;
